--- a/2016/optics/README
+++ b/2016/optics/README
@@ -2,4 +2,4 @@ This directory contains files sent by Frigyes Janos Nemes in an email "CT-PPS: x
 
 Documentation available at
   https://indico.cern.ch/event/607940/contributions/2450493/attachments/1401433/2139319/ctpps_2016_optics_note_Frici_25012017.pdf
-and being uploaded to CDS as (CERN-TOTEM-NOTE-2017-002](http://cds.cern.ch/record/2256433?ln=en).
+and being uploaded to CDS as [CERN-TOTEM-NOTE-2017-002](http://cds.cern.ch/record/2256433?ln=en).
